--- a/SudukoBoardLibaryTests/SudokuBoardLibaryTests.csproj
+++ b/SudukoBoardLibaryTests/SudokuBoardLibaryTests.csproj
@@ -13,6 +13,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\SudukoBoardLibary\SudokuBoardLibary.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Using Include="Microsoft.VisualStudio.TestTools.UnitTesting" />
   </ItemGroup>
 
